<resources>
    <string name="app_name">Everdale Stat</string>
    <string name="tap_to_start">Tap to start..</string>
    <string name="hello">Hello!</string>
    <string name="your_game_result_list">Your game result list</string>
    <string name="default_man_name">Default man name</string>
    <string name="default_woman_name">Default woman name</string>
    <string name="default_sum">50</string>
    <string name="games_list">Games list</string>
    <string name="winner">Winner:</string>
    <string name="nickname">nickName</string>
    <string name="result">Result:</string>
    <string name="game_name">Game Name</string>
    <string name="save">Save</string>
    <string name="provide_game_info">Provide game info</string>
    <string name="the_name_of_the_game">The name of the game</string>
    <string name="minimum_number_of_players">Minimum number of players</string>
    <string name="maximum_number_of_players">Maximum number of players</string>
    <string name="date">Date:</string>
    <string name="default_date">12.03.1998</string>
    <string name="enter_each_player_s_scores">Enter each player\'s scores</string>
    <string name="name">Name:</string>
    <string name="enter_the_player_s_earned_points">Enter the player\'s earned points</string>
    <string name="share_your_points">Share your points</string>
    <string name="who_are_you">Who are you?</string>
    <string name="fill_in_the_fields">Fill in the fields</string>
</resources>